<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/mainLayout">


    <ImageView
            android:layout_width="@dimen/GWS_MATCH_CONSTRAINT"
            android:layout_height="@dimen/GWS_MATCH_CONSTRAINT" tools:srcCompat="@drawable/main_menu"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:cropToPadding="false" android:scaleType="centerCrop" app:srcCompat="@drawable/main_menu"
            android:contentDescription="@string/GWS_MENU_BACKGROUND"/>
    <Button
            android:text="@string/GWS_START_GAME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startGameButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/GWS_STANDARD_MARGIN"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/GWS_STANDARD_MARGIN" android:layout_marginTop="@dimen/GWS_STANDARD_MARGIN"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:textSize="36sp"/>
    <Button
            android:text="@string/GWS_HOW_TO_PLAY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/howToPlayButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/GWS_STANDARD_MARGIN"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/GWS_STANDARD_MARGIN" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/startGameButton" android:textSize="36sp"/>
    <Button
            android:text="@string/GWS_EXIT_BUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exitButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/GWS_STANDARD_MARGIN"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/GWS_STANDARD_MARGIN" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/howToPlayButton" android:textSize="36sp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.1"/>

</androidx.constraintlayout.widget.ConstraintLayout>